fixing overflow issues

--- a/src/app/core/home/social/social.component.scss
+++ b/src/app/core/home/social/social.component.scss
@@ -16,12 +16,17 @@
 
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
   }
 
   &--share{
     background: $primaryAccentColor;
-    // width: 250px;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 
   &--img{
